Adding line to services page

--- a/src/templates/services/index.hbs
+++ b/src/templates/services/index.hbs
@@ -28,6 +28,13 @@
           </div>
         </div>
       </section>
+      <section class="pv2">
+        <div class="mw8 center ph3-ns">
+          <div class="cf ph2-ns">
+            <h1 class="f4 lh-copy">In addition to the packages below, Katie and her team provide full-service marketing and operational implementation and execution for their clients. To learn more and request pricing, <a class="f4 lh-copy h1 i-l" href="https://katielentile.typeform.com/to/RH1f9y">please contact us.</a></h1>
+          </div>
+        </div>
+      </section>
       <section class="pv4">
         <div class="mw8 center ph3-ns">
           <div class="cf ph2-ns">
@@ -112,10 +119,10 @@
             <a href="/" class="f5 h6 lh-copy">© Katie Lentile 2017</a>
           </div>
           <div class="fl w-100 w-50-ns pa2">
-              <a target="_blank" href="https://twitter.com/katielentile" class="f5 h6 lh-copy footer-link">Twitter</a>
-              <a target="_blank" href="https://www.instagram.com/katielentile/" class="f5 h6 lh-copy footer-link">Instagram</a>
-              <a target="_blank" href="https://www.facebook.com/KatieLentile" class="f5 h6 lh-copy footer-link">Facebook</a>
-              <a target="_blank" href="https://katielentile.typeform.com/to/RH1f9y" class="f5 h6 lh-copy footer-link">Contact Me</a>
+            <a target="_blank" href="https://twitter.com/katielentile" class="f5 h6 lh-copy footer-link">Twitter</a>
+            <a target="_blank" href="https://www.instagram.com/katielentile/" class="f5 h6 lh-copy footer-link">Instagram</a>
+            <a target="_blank" href="https://www.facebook.com/KatieLentile" class="f5 h6 lh-copy footer-link">Facebook</a>
+            <a target="_blank" href="https://katielentile.typeform.com/to/RH1f9y" class="f5 h6 lh-copy footer-link">Contact Me</a>
           </div>
         </div>
       </section>
