--- a/src/templates/about/index.hbs
+++ b/src/templates/about/index.hbs
@@ -26,7 +26,7 @@
           </div>
           <div class="fl w-100 w-50-ns pa2">
             <div class="pa2">
-              <h1 class="f2 lh-copy">About Me</h1>
+              <h1 class="f2 lh-copy">About Katie</h1>
               <h4 class="f5 lh-copy">Over the past decade, Katie has worked alongside clients both locally and abroad. Utilizing her hands-on experience and widespread knowledge, she's been able to bring valuable insight to freelancers, companies, and organizations, ensuring their businesses not only grow, but grow well.</h4><br>
               <h4 class="f5 lh-copy">Having successfully created strategies and launched campaigns for over a dozen companies (including Kenneth Cole, Google, WELD, Vanderbilt University, and Flip Flop Wines), Katie leads all her projects with one guiding principle: there is no ‘one size fits all’ solution. She firmly believes the key to building a successful business is meeting one-on-one and learning what makes you or your product unique. From there, she works with you to create a strategic plan forward, helping you establish scalable growth, long-term sustainability, and an overall sense of confidence in your business.</h4><br>
               <h4 class="f5 lh-copy">When you work with Katie, you’re investing in an individual who’s dedicated to fulfilling your unique vision and goals — something that can’t be replicated by a catch-all course or business manual.</h4><br>
